--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="input-box">
       <input type="text" id="messageInput" placeholder="Type your message here..." />
       <span id="emojiBtn">😊</span>
-      <button id="sendBtn">📤</button>
+      <button id="sendBtn"> <img src="arrowgrey.png" alt="Send" /> </button>
     </div>
   </div>
 
