--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style2.css" />
 </head>
 <body>
-  <!-- login Popup -->
+  <!-- Login Popup -->
   <div id="loginPopup" class="popup">
     <div class="popup-content">
       <h2 style="color: var(--white); font-size: 28px; margin-bottom: 20px;">Welcome to the Chat</h2>
