--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <!-- Login Popup -->
-  <div id="loginPopup" class="popup">
+  <div id="loginPopup" class="popup" style="display: none;">
     <div class="popup-content">
       <h2 style="color: var(--white); font-size: 28px; margin-bottom: 20px;">Welcome to the Chat</h2>
       <input type="text" id="usernameInput" placeholder="Enter your username..." />
