--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Chat UI</title>
+  <title>Chatting Project</title>
   <link rel="stylesheet" href="style2.css" />
 </head>
 <body>
   <!-- Login Popup -->
   <div id="loginPopup" class="popup" style="display: none;">
     <div class="popup-content">
-      <h2 style="color: var(--white); font-size: 28px; margin-bottom: 20px;">Welcome to the Chat</h2>
+      <h2 style="color: var(--white); font-size: 28px; margin-bottom: 20px;">Welcome!<br>Enter username:</h2>
       <input type="text" id="usernameInput" placeholder="Enter your username..." />
       <button id="loginBtn">Enter Chat</button>
     </div>
