--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style2.css" />
 </head>
 <body>
-  <!-- Login Popup -->
+  <!-- login popup -->
   <div id="loginPopup" class="popup" style="display: none;">
     <div class="popup-content">
       <h2 style="color: var(--white); font-size: 28px; margin-bottom: 20px;">Welcome!<br>Enter username:</h2>
@@ -16,10 +16,10 @@
     </div>
   </div>
 
-  <!-- Avatar Button -->
+  <!-- avatar button -->
   <div id="avatarButton" class="avatar-button" style="display: none;"></div>
 
-  <!-- Avatar Popup -->
+  <!-- avatar menu popup -->
   <div id="avatarPopup" class="avatar-popup" style="display: none;">
     <div class="avatar-popup-content">
       <button class="styled-btn">Change Profile Image</button>
@@ -28,7 +28,7 @@
     </div>
   </div>
 
-  <!-- Chat Container -->
+  <!-- chat window -->
   <div class="chat-container" style="display: none;">
     <div class="tab-selector">
       <button class="tab active">Public Chat</button>
