--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,14 @@
   <!-- avatar menu popup -->
   <div id="avatarPopup" class="avatar-popup" style="display: none;">
     <div class="avatar-popup-content">
-      <button class="styled-btn">Change Profile Image</button>
+      <form id="avatarForm" enctype="multipart/form-data">
+        <input type="file" id="avatarFile" name="avatar" accept="image/*" />
+        <button type="submit" class="styled-btn">Upload Image</button>
+      </form>
+      <!-- <button class="styled-btn">Change Profile Image</button> -->
       <button class="styled-btn" id="logoutBtn">Logout</button>
       <button class="styled-btn" id="closeAvatarPopup">Close</button>
+      
     </div>
   </div>
 
