--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,12 @@
   <div id="avatarPopup" class="avatar-popup" style="display: none;">
     <div class="avatar-popup-content">
       <form id="avatarForm" enctype="multipart/form-data">
-        <input type="file" id="avatarFile" name="avatar" accept="image/*" />
+        <!-- upload button pls work -->
+        <input type="file" id="avatarFile" name="avatar" accept="image/*" style="display: none;" />
+        <button type="button" id="triggerUpload" class="styled-btn">Change Profile Image</button>
         <button type="submit" class="styled-btn">Upload Image</button>
       </form>
+
       <!-- <button class="styled-btn">Change Profile Image</button> -->
       <button class="styled-btn" id="logoutBtn">Logout</button>
       <button class="styled-btn" id="closeAvatarPopup">Close</button>
