--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
     <div class="avatar-popup-content">
       <form id="avatarForm" enctype="multipart/form-data">
         <!-- upload button pls work -->
+        <input type="hidden" name="username" id="uploadUsername" />
         <input type="file" id="avatarFile" name="avatar" accept="image/*" style="display: none;" />
         <button type="button" id="triggerUpload" class="styled-btn">Change Profile Image</button>
       </form>
