--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
   <!-- avatar menu popup -->
   <div id="avatarPopup" class="avatar-popup" style="display: none;">
     <div class="avatar-popup-content">
-      <form id="avatarForm" enctype="multipart/form-data">
+      <form id="avatarForm" method="POST" action="/api/upload-avatar" enctype="multipart/form-data">
         <!-- upload button pls work -->
         <input type="hidden" name="username" id="uploadUsername" />
         <input type="file" id="avatarFile" name="avatar" accept="image/*" style="display: none;" />
