--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       </form>
 
       <button class="danger">Reset Profile Image</button>
-      <button id="logoutBtn">Logout</button>
+      <button type="styled-button" id="logoutBtn">Logout</button>
       <button id="closeAvatarPopup">Close</button>
       
     </div>
