--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
         <button type="button" id="triggerUpload">Change Profile Image</button>
       </form>
 
-      <button class="danger">Reset Profile Image</button>
+      <button type="styled-button" class="danger">Reset Profile Image</button>
       <button type="styled-button" id="logoutBtn">Logout</button>
       <button id="closeAvatarPopup">Close</button>
       
