--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,8 @@
         <button type="button" id="triggerUpload">Change Profile Image</button>
       </form>
 
-      <button type="styled-button" class="danger">Reset Profile Image</button>
-      <button type="styled-button" id="logoutBtn">Logout</button>
+      <button class="styled-button">Reset Profile Image</button>
+      <button class="styled-button" id="logoutBtn">Logout</button>
       <button id="closeAvatarPopup">Close</button>
       
     </div>
