--- a/public/index.html
+++ b/public/index.html
@@ -26,12 +26,12 @@
         <!-- upload button pls work -->
         <input type="hidden" name="username" id="uploadUsername" />
         <input type="file" id="avatarFile" name="avatar" accept="image/*" style="display: none;" />
-        <button type="button" id="triggerUpload">Change Profile Image</button>
+        <button type="button" id="triggerUpload" class="styled-btn">Change Profile Image</button>
       </form>
 
-      <button class="styled-button">Reset Profile Image</button>
-      <button class="styled-button" id="logoutBtn">Logout</button>
-      <button id="closeAvatarPopup">Close</button>
+      <!-- <button class="styled-btn">Change Profile Image</button> -->
+      <button class="styled-btn" id="logoutBtn">Logout</button>
+      <button class="styled-btn" id="closeAvatarPopup">Close</button>
       
     </div>
   </div>
