--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
       </form>
 
       <!-- <button class="styled-btn">Change Profile Image</button> -->
+      <button class="styled-btn">Reset Profile Image</button>
       <button class="styled-btn" id="logoutBtn">Logout</button>
       <button class="styled-btn" id="closeAvatarPopup">Close</button>
       
