comments, fixed blinking pfps

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
         <button type="button" id="triggerUpload" class="styled-button">Change Profile Image</button>
       </form>
 
-      <!-- <button class="styled-button">Change Profile Image</button> -->
+      <!-- <button class="styled-button">Change Profile Image</button>  (old upload button placeholder)-->
       <button class="styled-button" id="logoutBtn">Logout</button>
       <button class="styled-button" id="closeAvatarPopup">Close</button>
       
